--- a/src/main/res/layout/layout_empty_mutual.xml
+++ b/src/main/res/layout/layout_empty_mutual.xml
@@ -12,6 +12,7 @@
         android:text="@string/rate_and_have_mutual_or_buy_and_chat"
         style="@style/ListItemEmptyText"
         android:layout_centerInParent="true"
+        android:maxWidth="290dp"
         android:gravity="center" />
 
     <LinearLayout
