--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -305,10 +305,9 @@
         <item name="android:textColor">@color/text_color_gray</item>
         <item name="android:textSize">17sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:lineSpacingExtra">20sp</item>
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginRight">16dp</item>
-        <item name="android:fontFamily">Roboto Light</item>
+        <item name="android:maxWidth">240dp</item>
     </style>
 
     <style name="ListItemEmptyText.Bold">
