--- a/src/main/res/layout/fragment_form.xml
+++ b/src/main/res/layout/fragment_form.xml
@@ -3,6 +3,18 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
+    <ListView
+        android:id="@+id/fragmentFormList"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:cacheColorHint="#00000000"
+        android:divider="@drawable/gray_list_divider"
+        android:dividerHeight="1dp"
+        android:fadeScrollbars="true"
+        android:fadingEdge="none"
+        android:listSelector="@android:color/transparent"
+        android:headerDividersEnabled="false"/>
+
     <LinearLayout
         android:id="@+id/loEmptyForm"
         android:layout_width="fill_parent"
@@ -10,7 +22,8 @@
         android:orientation="vertical"
         android:visibility="gone"
         android:layout_centerInParent="true"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:layout_alignWithParentIfMissing="true">
 
         <TextView
             android:id="@+id/tvEmptyForm"
@@ -57,16 +70,5 @@
             android:visibility="gone" />
 
     </LinearLayout>
-
-    <ListView
-        android:id="@+id/fragmentFormList"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:cacheColorHint="#00000000"
-        android:divider="@drawable/gray_list_divider"
-        android:dividerHeight="1dp"
-        android:fadeScrollbars="true"
-        android:fadingEdge="none"
-        android:listSelector="@android:color/transparent"/>
 
 </RelativeLayout>
