--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -452,7 +452,10 @@
     <style name="Gift.Strip">
         <item name="android:layout_width">@dimen/form_gift_size</item>
         <item name="android:layout_height">@dimen/form_gift_size</item>
-        <item name="android:padding">0dp</item>
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:paddingRight">2dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingBottom">0dp</item>
         <item name="android:layout_margin">0dp</item>
     </style>
 
