--- a/src/main/res/layout/edit_dialog_buttons.xml
+++ b/src/main/res/layout/edit_dialog_buttons.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/base_indent"
+    android:layout_marginRight="@dimen/base_indent"
+    android:gravity="center_horizontal">
 
     <View
         android:id="@+id/edit_dialog_buttons_top"
