--- a/src/main/res/layout/item_user_gallery_add_btn.xml
+++ b/src/main/res/layout/item_user_gallery_add_btn.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
     <ImageView
         android:id="@+id/ivPhoto"
-        style="@style/GalleryAddItem"
-        android:layout_centerInParent="true" />
+        style="@style/GalleryAddItem"/>
 
-</RelativeLayout>
+</FrameLayout>
