--- a/src/main/res/layout/edit_dialog_text.xml
+++ b/src/main/res/layout/edit_dialog_text.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
+    android:layout_gravity="center_horizontal"
     android:descendantFocusability="afterDescendants">
 
     <EditText
@@ -10,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
+        android:layout_gravity="center_horizontal"
         android:inputType="textCapSentences"
         android:layout_margin="15dp" />
 </FrameLayout>
