--- a/src/main/res/layout/item_user_list.xml
+++ b/src/main/res/layout/item_user_list.xml
@@ -4,8 +4,7 @@
     android:layout_width="fill_parent"
     android:minHeight="60dp"
     android:layout_height="wrap_content"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
+    android:padding="8dp"
     android:gravity="center_vertical">
 
     <!-- Title -->
@@ -14,7 +13,6 @@
         android:id="@+id/tvTitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
         android:paddingBottom="3dp"
         android:singleLine="true" />
 
