--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1121,4 +1121,8 @@
         <item name="android:drawableRight">@drawable/ic_coins</item>
         <item name="android:textSize">24sp</item>
     </style>
+
+    <style name="ContactsListName" parent="ListName">
+        <item name="android:maxWidth">@null</item>
+    </style>
 </resources>
