--- a/src/main/res/layout/birthday_confirm_popup.xml
+++ b/src/main/res/layout/birthday_confirm_popup.xml
@@ -5,45 +5,44 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_marginTop="100dp"
         android:layout_width="280dp"
-        android:layout_height="256dp"
+        android:layout_height="265dp"
         android:background="#efefef"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        android:id="@+id/linearLayout3">
 
         <ImageView
             android:id="@+id/icBirthday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:src="@drawable/ic_cake"
             android:layout_marginTop="36dp"
-            android:layout_marginBottom="24dp" />
+            android:layout_marginBottom="24dp"
+            android:layout_gravity="center_horizontal" />
 
         <TextView
-            android:id="@+id/birthdayReminderText"
+            android:id="@+id/textView"
             android:text="@string/birthdate_confirm"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#333333"
             android:textSize="16sp"
-            android:paddingBottom="20dp"
             android:gravity="center"
-            android:layout_above="@+id/setBirthday"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp" />
 
         <Button
             android:id="@+id/setBirthday"
             style="@style/FlatButton.Blue"
-            android:layout_width="fill_parent"
-            android:layout_height="44dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:text="@string/set_birthdate" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:maxHeight="44dp"
+            android:text="@string/set_birthdate"
+            android:height="44dp" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
