--- a/src/main/res/layout/edit_dialog.xml
+++ b/src/main/res/layout/edit_dialog.xml
@@ -6,16 +6,13 @@
 
     <TextView
         android:id="@+id/edit_dialog_limit"
+        style="@style/SelectorDialogTitle"
         android:textColor="@color/text_color_gray_transparent"
         android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        tools:text='1024/1024'
-        android:paddingTop="20dp"
-        android:paddingBottom="12dp"
-        android:paddingLeft="1dp"
-        android:paddingRight="1dp" />
+        tools:text='1024/1024' />
 
     <TextView
         android:id="@+id/edit_dialog_title"
@@ -46,8 +43,6 @@
         android:dividerHeight="1dp"
         android:layout_below="@id/edit_dialog_title_divider"
         android:scrollbars="none"
-        android:maxLines="2"
-        android:ellipsize="end"
         android:descendantFocusability="afterDescendants" />
 
     <ViewStub
