--- a/src/main/res/values/editor.xml
+++ b/src/main/res/values/editor.xml
@@ -51,7 +51,7 @@
     <string name="editor_ban_del_photo_all">Удалить все фото</string>
     <string name="editor_ban_del_status">Удалить статус</string>
     <string name="editor_ban_del_about">Удалить "О Себе"</string>
-    <string name="editor_ban_result_ok">Пользователь забанен</string>
+    <string name="editor_ban_result_ok">Пользователь забанен.</string>
     <string name="editor_ban_unban_user">Убрать бан</string>
     <string name="editor_ban_unban_user_result">Разбанен</string>
 
