--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -141,6 +141,7 @@
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="ButtonWhiteTextMini" parent="ButtonWhiteText">
