--- a/src/main/res/layout/edit_dialog_text.xml
+++ b/src/main/res/layout/edit_dialog_text.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:descendantFocusability="afterDescendants">
 
@@ -10,9 +10,9 @@
         style="@style/topfaceEditText.Holo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
         android:layout_gravity="center_horizontal"
+        android:layout_margin="15dp"
+        android:gravity="center_vertical"
         android:inputType="textCapSentences"
-        android:textSize="18sp"
-        android:layout_margin="15dp" />
+        android:textSize="18sp" />
 </FrameLayout>
