--- a/src/main/res/layout/fragment_tabbed_feed.xml
+++ b/src/main/res/layout/fragment_tabbed_feed.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/tab_divider"
         app:tabIndicatorColor="@color/tab_text_color_selected"
+        app:tabMode="scrollable"
+        app:tabContentStart="73dp"
         app:tabGravity="fill" />
 
     <android.support.v4.view.ViewPager
