--- a/src/main/res/layout/purchases_fragment.xml
+++ b/src/main/res/layout/purchases_fragment.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/tab_divider"
         app:tabGravity="fill"
+        app:tabMode="scrollable"
+        app:tabContentStart="73dp"
         app:tabIndicatorColor="@color/tab_text_color_selected" />
 
 
