--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
     <style name="TopfaceAuthText" parent="topfaceEditText">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
+        <item name="android:singleLine">true</item>
         <item name="android:gravity">center_horizontal|left</item>
     </style>
 
