--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1211,4 +1211,19 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minWidth">240dp</item>
     </style>
+
+    <style name="VkProfileUserName">
+        <item name="android:gravity">center</item>
+        <item name="android:paddingBottom">36dp</item>
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:textColor">#404040</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="VkProfileButtons" parent="Widget.Topface.Button.Big.Gray">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:visibility">gone</item>
+        <item name="android:layout_marginBottom">12dp</item>
+    </style>
 </resources>
