--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -63,6 +63,15 @@
         <item name="android:windowAnimationStyle">@null</item>
     </style>
 
+    <style name="AboutApp" parent="Theme.Topface">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/bg_white</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="android:windowCloseOnTouchOutside" tools:ignore="NewApi">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+    </style>
+
     <style name="EditDialog" parent="Theme.Topface">
         <item name="android:checkboxStyle">@style/CheckboxLeft</item>
         <item name="android:background">@color/bg_white</item>
