--- a/src/main/res/layout/fragment_auth.xml
+++ b/src/main/res/layout/fragment_auth.xml
@@ -3,8 +3,6 @@
 
     <data>
 
-        <import type="android.view.View" />
-
         <variable
             name="handler"
             type="com.topface.topface.ui.fragments.AuthFragment.LoginFragmentHandler" />
@@ -52,7 +50,7 @@
                         android:id="@+id/tf_auth_back"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:onClick="@{handler.UpButtonClick}"
+                        android:onClick="@{handler.upButtonClick}"
                         android:padding="20dp"
                         android:src="@drawable/ic_arrow_back"
                         android:visibility="gone" />
@@ -77,21 +75,21 @@
                         <Button
                             android:id="@+id/btnAuthFB"
                             style="@style/AuthFb"
-                            android:onClick="@{handler.FBButtonClick}"
+                            android:onClick="@{handler.fbButtonClick}"
                             android:text="@string/auth_btn_fb" />
 
                         <Button
                             android:id="@+id/btnAuthVK"
                             style="@style/AuthVk"
                             android:layout_marginTop="@dimen/auth_buttons_padding"
-                            android:onClick="@{handler.VKButtonClick}"
+                            android:onClick="@{handler.vkButtonClick}"
                             android:text="@string/auth_btn_vk" />
 
                         <Button
                             android:id="@+id/btnAuthOk"
                             style="@style/AuthOk"
                             android:layout_marginTop="@dimen/auth_buttons_padding"
-                            android:onClick="@{handler.OKButtonClick}"
+                            android:onClick="@{handler.okButtonClick}"
                             android:text="@string/auth_btn_ok" />
 
                         <Button
@@ -100,7 +98,7 @@
                             android:layout_marginBottom="5dp"
                             android:layout_marginTop="@{handler.mTFButtonPaddingTop}"
                             android:gravity="center"
-                            android:onClick="@{handler.TFButtonClick}"
+                            android:onClick="@{handler.tfButtonClick}"
                             android:text="@string/auth_btn_tf"
                             android:textColor="@color/auth_fragment_text_color" />
 
@@ -108,7 +106,7 @@
                             android:id="@+id/btnEntrance"
                             style="@style/AuthButtonBlue"
                             android:drawableLeft="@drawable/ic_enter"
-                            android:onClick="@{handler.EntranceButtonClick}"
+                            android:onClick="@{handler.entranceButtonClick}"
                             android:text="@string/sign_in"
                             android:textColor="#FFFFFF"
                             android:visibility="gone" />
@@ -119,7 +117,7 @@
                             android:layout_marginBottom="5dp"
                             android:layout_marginTop="@dimen/auth_buttons_padding"
                             android:drawableLeft="@drawable/ic_add"
-                            android:onClick="@{handler.CreateAccountButtonClick}"
+                            android:onClick="@{handler.createAccountButtonClick}"
                             android:text="@string/create_account"
                             android:textColor="#4B4B4B"
                             android:visibility="gone" />
@@ -133,7 +131,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:background="@null"
-                android:onClick="@{handler.OtherSocButtonClick}"
+                android:onClick="@{handler.otherSocButtonClick}"
                 android:text="@{handler.getOtherServicesButtonText}"
                 android:textColor="@color/auth_fragment_text_color" />
         </LinearLayout>
