--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1238,6 +1238,10 @@
         <item name="android:layout_marginBottom">12dp</item>
     </style>
 
+    <style name="OkProfileButtons" parent="VkProfileButtons" />
+
+    <style name="OkProfileUserName" parent="VkProfileUserName" />
+
     <style name="InvisibleProgress">
         <item name="android:visibility">gone</item>
     </style>
